...
            label = { Text(stringResource(Res.string.CreateDescriptor_Login_Email)) },
            singleLine = true,
            isError = state.errorMessage == ErrorMessage.EmailInvalid,
            keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Email),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("CreateDescriptor-Email"),
        )
        ErrorText(state.errorMessage)

        Button(
            onClick = { onEvent(Event.SendLoginLinkClicked) },
            enabled = !state.isBusy,
...
