...
            onValueChange = { onEvent(Event.TokenChanged(it)) },
            label = { Text(stringResource(Res.string.CreateDescriptor_Login_Token)) },
            isError = state.errorMessage != null,
            keyboardOptions = KeyboardOptions.Default.copy(keyboardType = KeyboardType.Uri),
            modifier = Modifier
                .fillMaxWidth()
                .testTag("CreateDescriptor-Token"),
        )

        ErrorText(state.errorMessage)

        Button(
            onClick = { onEvent(Event.VerifyClicked) },
...
